# common-server

./: .gitignore  README.md
server/services/src/source/: CMakeLists.txt  Makefile.am  README  build_all.sh  build_project.sh  build_release.sh  build_release_2.sh  build_symbol.sh  build_symbol_2.sh  configure.ac
server/services/src/source/DataRouter/: CMakeLists.txt  DataRouter.vcxproj  DataRouter.vcxproj.filters  DataRouterApp.cpp  DataRouterApp.h  DataRouterApp_NetCmd.cpp  ReadMe.txt  sMain.cpp
server/services/src/source/DataRouter/config/: RouterConfig.h
server/services/src/source/DataRouter/network/: FightRouterLinkFrom.cpp  FightRouterLinkFrom.h  GateServiceLinkFrom.cpp  GateServiceLinkFrom.h  HomeServiceLinkFrom.cpp  HomeServiceLinkFrom.h  LoginServiceLinkFrom.cpp  LoginServiceLinkFrom.h  RouterSession.cpp  RouterSession.h  ServiceRouterLinkFrom.cpp  ServiceRouterLinkFrom.h  StateServiceLinkFrom.cpp  StateServiceLinkFrom.h
server/services/src/source/FightRouter/: CMakeLists.txt  FightRouter.vcxproj  FightRouter.vcxproj.filters  FightRouterApp.cpp  FightRouterApp.h  FightRouterApp_NetCmd.cpp  ReadMe.txt  sMain.cpp
server/services/src/source/FightRouter/config/: FightRouterConfig.h
server/services/src/source/FightRouter/network/: DataRouterLinkTo.cpp  DataRouterLinkTo.h  FightRouterSession.cpp  FightRouterSession.h  GameRegionResolver.cpp  GameRegionResolver.h  GameServiceLinkFrom.cpp  GameServiceLinkFrom.h  GateServiceLinkFrom.cpp  GateServiceLinkFrom.h  HomeServiceLinkFrom.cpp  HomeServiceLinkFrom.h  MatchMakingServiceLinkFrom.cpp  MatchMakingServiceLinkFrom.h
server/services/src/source/FightRouterService/: CMakeLists.txt  FightRouterServiceApp.cpp  FightRouterServiceApp.h  FightRouterServiceApp_NetCmd.cpp  sMain.cpp
server/services/src/source/FightRouterService/network/: FightRouterSession.cpp  GameServiceLinkFrom.cpp  HomeServiceLinkFrom.cpp  MatchMakingServiceLinkFrom.cpp  MatchMakingServiceLinkFrom.h
server/services/src/source/GameService/: CMakeLists.txt  GameService.vcxproj  GameService.vcxproj.filters  GameServiceApp.cpp  GameServiceApp.h  GameServiceApp_NetCmd.cpp  ReadMe.txt  build_project.sh  sMain.cpp
server/services/src/source/GameService/config/: GameConfig.h
server/services/src/source/GameService/network/: FightRouterLinkTo.cpp  FightRouterLinkTo.h  FightRouterServiceLinkTo.cpp  FightRouterServiceLinkTo.h  GameSession.cpp  GameSession.h  GateServiceLinkFrom.cpp  GateServiceLinkFrom.h  HomeServiceLinkTo.cpp  HomeServiceLinkTo.h
server/services/src/source/GameService/region/: GamePlayer.cpp  GamePlayer.h  IRegionMap.cpp  IRegionMap.h  RegionCellNode.cpp  RegionCellNode.h  RegionChannelService.cpp  RegionChannelService.h  RegionChannelServiceTimer.cpp  RegionChannelService_Network.cpp  RegionMapBoxImpl.cpp  RegionMapBoxImpl.h  RegionMapBoxImpl_InOut.cpp  RegionPlayerContainer.h
server/services/src/source/GateService/: CMakeLists.txt  GateService.vcxproj  GateService.vcxproj.filters  GateServiceApp.cpp  GateServiceApp.h  GateServiceApp_NetCmd.cpp  ReadMe.txt  _get_all_cpp.sh  sMain.cpp
server/services/src/source/GateService/config/: GateConfig.h
server/services/src/source/GateService/network/: DataRouterLinkTo.cpp  DataRouterLinkTo.h  FightRouterLinkTo.cpp  FightRouterLinkTo.h  GameServiceLinkTo.cpp  GameServiceLinkTo.h  GateSession.cpp  GateSession.h  HomeServiceLinkTo.cpp  HomeServiceLinkTo.h  RouterServiceLinkTo.cpp  RouterServiceLinkTo.h  ServiceRouterLinkTo.cpp  ServiceRouterLinkTo.h  UnionClusterLinkTo.cpp  UnionClusterLinkTo.h
server/services/src/source/GateService/player/: GamePlayer.cpp  GamePlayer.h  GamePlayerCtrl.cpp  GamePlayerCtrl.h  GamePlayerCtrl_Maintnce.cpp  GamePlayerCtrl_Network.cpp  GamePlayer_NetSession.cpp  GamePlayer_Network.cpp  PlayerChannel.cpp  PlayerChannel.h  PlayerChannel_Network.cpp
server/services/src/source/HomeService/: CMakeLists.txt  HomeService.vcxproj  HomeService.vcxproj.filters  HomeServiceApp.cpp  HomeServiceApp.h  HomeServiceApp_NetCmd.cpp  ReadMe.txt  sMain.cpp
server/services/src/source/HomeService/config/: HomeConfig.h
server/services/src/source/HomeService/dbs/: DBSCtrl.cpp  DBSCtrl.h  dbThread.cpp  dbThread.h
server/services/src/source/HomeService/lobby/: LobbyService.cpp  LobbyService.h  LobbyService_Lua.cpp  LobbyService_Network.cpp  LobbyService_Task.cpp  LobbyUser.cpp  LobbyUser.h  LobbyUserContainer.h  LobbyUser_Database.cpp  LobbyUser_Lua.cpp  LobbyUser_Network.cpp  LobbyUser_Redis.cpp  LobbyUser_Task.cpp
server/services/src/source/HomeService/network/: DataRouterLinkTo.cpp  FightRouterLinkTo.cpp  FightRouterLinkTo.h  FightRouterServiceLinkTo.cpp  GateServiceLinkFrom.cpp  GateServiceLinkFrom.h  HomeSession.cpp  HomeSession.h  ResClusterLinkTo.cpp  ResClusterLinkTo.h  UnionClusterLinkTo.cpp  UnionClusterLinkTo.h
server/services/src/source/LoginService/: CMakeLists.txt  LoginServiceApp.cpp  LoginServiceApp.h  LoginServiceApp_NetCmd.cpp  ReadMe.txt  sMain.cpp
server/services/src/source/LoginService/config/: LoginConfig.h
server/services/src/source/RouterService/: CMakeLists.txt  ReadMe.txt  RouterServiceApp.cpp  RouterServiceApp.h  RouterServiceApp_NetCmd.cpp  sMain.cpp
server/services/src/source/ServiceRouter/: CMakeLists.txt  ServiceRouter.vcxproj  ServiceRouter.vcxproj.filters  ServiceRouterApp.cpp  ServiceRouterApp.h  ServiceRouterApp_NetCmd.cpp  build_project.sh  sMain.cpp
server/services/src/source/StateService/: CMakeLists.txt  StateService.vcxproj  StateService.vcxproj.filters  StateServiceApp.cpp  StateServiceApp.h  StateServiceApp_NetCmd.cpp  sMain.cpp
server/services/src/source/UnionService/: CMakeLists.txt  UnionService.vcxproj  UnionService.vcxproj.filters  UnionServiceApp.cpp  UnionServiceApp.h  UnionServiceApp_NetCmd.cpp  sMain.cpp
server/services/src/source/libs/: CMakeLists.txt
server/services/src/source/sEureka/: CMakeLists.txt  EurekaService.cpp  EurekaService.h  Makefile.am  ReadMe.txt  build_project.sh  debugdefine.h  sEureka.vcxproj  sEureka.vcxproj.filters  sEurekaApp.cpp  sEurekaApp.h  sMain.cpp
(+1673 files in other folders)
