CURRENTPATH =$(shell /bin/pwd)
export CURRENTPATH

MYLIBPATH =$(CURRENTPATH)/../sdk/liblinux
export MYLIBPATH

MYLIBHPATH =$(CURRENTPATH)/../sdk/include
export MYLIBHPATH

MYSDKLIBPATH =$(CURRENTPATH)/../sdk
export MYSDKLIBPATH

MYSRCTOP =$(CURRENTPATH)
export MYSRCTOP

SUBDIRS = ewwLogSystem ewwLib ewwLib/gsoap ewwGameLib ewwASPolicy ewwCenter ewwDBCache ewwGateway ewwGlobalSvr ewwGS ewwLoginSvr ewwService

AUTOMAKE_OPTIONS = foreign
